k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cocreate-api
  namespace: default
spec:
  ports:
    - name: app
      port: 3002
      protocol: TCP
      targetPort: 3002
  selector:
    app: cocreate-api

  sessionAffinity: None
  type: ClusterIP
