k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"
  name: cocreate-api
  namespace: default
spec:
  rules:
    - host: "*.cocreate.app"
      http:
        paths:
          - backend:
              serviceName: cocreate-api
              servicePort: 3002
            path: /api
  tls:
    - hosts:
        - "*.cocreate.app"
      secretName: cocreate-app
